--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ a {
 .columns {
   display: flex;
   justify-content: space-between;
-    font-family: 'Cabin', sans-serif;
-      padding-bottom: 60px;
+  font-family: 'Cabin', sans-serif;
+  padding-bottom: 60px;
 }
 
 .columns h2 {
@@ -133,11 +133,19 @@ a {
 
 .gallery-wrapper {
   display: flex;
-  justify-content: center;
+  /* float: left; */
+  width: 100%;
+}
+
+.gallery-wrapper div {
+  display: inline-block;
 }
 
 .gallery-wrapper img {
   -webkit-filter: brightness(1.1) saturate(70%);
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
 
 /* .social-left {
