--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ a {
 .page-wrapper {
   max-width: 1700px;
   margin: 0 auto;
+
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .lang-options {
@@ -30,7 +36,7 @@ a {
 }
 
 .navigation {
-  position: absolute;
+  position: fixed;
   right: 10px;
   top: 10px;
 }
@@ -76,9 +82,11 @@ a {
   font-size: 1.4em;
   display: flex;
   flex-direction: column;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 600;
-  letter-spacing: 1.7px;
+  /* font-family: 'Source Sans Pro', sans-serif; */
+  font-family: 'Helvetica', Arial;
+  line-height: 25.3px;
+  font-weight: 550;
+  letter-spacing: 0.17em;
 }
 
 .content {
@@ -88,7 +96,7 @@ a {
 .content-inside {
   width: 80%;
   margin: 0 auto;
-  padding-bottom: 160px;
+  /* padding-bottom: 160px; */
 }
 
 .picture-main {
@@ -102,14 +110,20 @@ a {
 .columns {
   display: flex;
   justify-content: space-between;
-  font-family: 'Cabin', sans-serif;
+  /* font-family: 'Cabin', sans-serif; */
+  font-family: 'Helvetica', Arial;
   padding-bottom: 60px;
 }
 
 .columns h2 {
   color: #262828;
-  letter-spacing: 1.5px;
+  /* letter-spacing: 1.5px; */
+  letter-spacing: 0.17em;
   font-size: 1.55em;
+}
+
+.columns p {
+  font-size: 0.85em;
 }
 
 .column {
@@ -144,25 +158,6 @@ a {
   object-fit: contain;
 }
 
-/* .social-left {
-  margin: 0;
-  position: absolute;
-  left: 370px;
-  top: 30%;
-}
-
-.social-left ul {
-  margin-left: -40px;
-
-}
-
-.social-left ul li {
-  padding: 5px 5px;
-  text-align: center;
-  color: #212121;
-  font-size: 17px;
-} */
-
 .links-right {
   transform: rotate(-90deg);
   margin: 0;
@@ -179,6 +174,8 @@ a {
 }
 
 #footer {
+
+  width: 100%;
   height: 160px;
   /* margin-top: -160px; */
   margin-top: 0px;
@@ -190,15 +187,27 @@ a {
 }
 
 .footer-imgs {
-  display: flex;
+  /* display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
   width: 100%;
+  display: flex;
+  padding-top: 30px;
+}
+
+.footer-imgs div {
+  display: inline-block;
+  padding: 0 4px;
 }
 
 .footer-imgs img{
   /* width: 11%; */
-  max-height: 90px;
+  /* max-height: 90px; */
+
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  /* display: inline; */
 }
 
 #footer ul {
@@ -214,11 +223,14 @@ a {
 }
 
 .footer-info {
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  justify-content: space-between;
+  /* position: absolute;
+  bottom: 0; */
+  /* display: flex;
+  justify-content: space-between; */
   width: 100%;
+  font-family: 'Cabin', sans-serif;
+  font-weight: lighter;
+  letter-spacing: 1.1px;
 }
 
 .footer-info ul {
@@ -266,6 +278,7 @@ a {
 
   .picture-main img {
     width: 70vw;
+    text-align: center;
   }
 
   .content-inside {
@@ -292,5 +305,18 @@ a {
 
   #footer {
     display: none;
+  }
+
+  .social-top ul{
+    background-color: #C0881F;
+    display: inline-block;
+    border-radius: 0 4px 4px 0;
+    text-align: center;
+
+    -webkit-padding-start: 0;
+    position: absolute;
+    top: 35%;
+    left: 0;
+
   }
 }
