--- a/style.css
+++ b/style.css
@@ -10,6 +10,36 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+/*  ==== NAVIGATION ====*/
+
+.hamburger {
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  height: 30px;
+}
+
+/* .burger img {
+  height: 30px;
+} */
+
+.navigation {
+  list-style-type: none;
+  position: fixed;
+  right: 50px;
+  top: 10px;
+}
+
+.hidden {
+  display: none;
+}
+
+.navigation li {
+  display: inline;
+  padding: 5px;
 }
 
 .page-wrapper {
@@ -35,11 +65,6 @@ a {
   margin-left: -40px;
 }
 
-.navigation {
-  position: fixed;
-  right: 10px;
-  top: 10px;
-}
 
 .social-top ul{
   width: 10%;
@@ -242,11 +267,6 @@ a {
 
 .footer-info ul {
   float: right;
-}
-
-/*  navigation */
-.navigation img {
-  height: 30px;
 }
 
 
