--- a/style.css
+++ b/style.css
@@ -49,6 +49,16 @@ a {
   position: fixed;
   right: 50px;
   top: 10px;
+  font-family: 'Helvetica', Arial;
+}
+
+.active {
+  border-bottom: 2px solid #34434B;
+}
+
+.navigation li:hover {
+  transition: .15s border-color ease;
+  border-bottom: 2px solid #8fa0a8;
 }
 
 .hidden {
@@ -62,32 +72,32 @@ a {
 }
 
 .navigation li:nth-child(6) {
-  animation: 0.9s slideIn 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: 0.35s slideIn 0.3s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(5) {
-  animation: 0.9s slideIn 0.45s cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: 0.35s slideIn 0.45s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(4) {
-  animation: 0.9s slideIn 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: 0.35s slideIn 0.6s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(3) {
-  animation: 0.9s slideIn 0.75s cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: 0.35s slideIn 0.75s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(2) {
-  animation: 0.9s slideIn 0.9s cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: 0.35s slideIn 0.9s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(1) {
-  animation: 0.9s slideIn 1.05s cubic-bezier(0.165, 0.84, 0.44, 1);
+  animation: 0.35s slideIn 1.05s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
@@ -279,6 +289,25 @@ a {
 }
 
 .footer-imgs {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.footer-imgs img {
+  height: 80px;
+  width: auto;
+
+}
+
+/* #footer img {
+  max-height: 100%;
+  width: auto;
+} */
+
+/* .footer-imgs {
   width: 100%;
   display: flex;
   padding-top: 30px;
@@ -294,7 +323,7 @@ a {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
-}
+} */
 
 .footer-info {
   width: 100%;
@@ -403,7 +432,7 @@ a {
     display: none;
   }
 
-  .gallery-wrapper div:nth-child(3), .gallery-wrapper div:nth-child(4)  {
+  .gallery-wrapper div:nth-child(4), .gallery-wrapper div:nth-child(5)  {
     display: none;
   }
 
