--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ a {
 }
 
 .navigation li:hover {
-  transition: .15s border-color ease;
-  border-bottom: 2px solid #8fa0a8;
+  /* transition: .15s border-color ease; */
+  border-bottom: 2px solid #bcd2db;
 }
 
 .hidden {
@@ -72,32 +72,32 @@ a {
 }
 
 .navigation li:nth-child(6) {
-  animation: 0.35s slideIn 0.3s cubic-bezier(.175,.885,.525,1.2);
+  animation: 0.35s slideIn 0.2s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(5) {
-  animation: 0.35s slideIn 0.45s cubic-bezier(.175,.885,.525,1.2);
+  animation: 0.35s slideIn 0.3s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(4) {
-  animation: 0.35s slideIn 0.6s cubic-bezier(.175,.885,.525,1.2);
+  animation: 0.35s slideIn 0.4s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(3) {
-  animation: 0.35s slideIn 0.75s cubic-bezier(.175,.885,.525,1.2);
+  animation: 0.35s slideIn 0.5s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(2) {
-  animation: 0.35s slideIn 0.9s cubic-bezier(.175,.885,.525,1.2);
+  animation: 0.35s slideIn 0.6s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
 .navigation li:nth-child(1) {
-  animation: 0.35s slideIn 1.05s cubic-bezier(.175,.885,.525,1.2);
+  animation: 0.35s slideIn 0.7s cubic-bezier(.175,.885,.525,1.2);
   animation-fill-mode: forwards;
 }
 
@@ -415,7 +415,10 @@ a {
 
 .span_1_of_10 img {
   width: 100%;
+}
 
+.desktop-disabled {
+  display: none;
 }
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
@@ -428,6 +431,14 @@ a {
 }
 
 @media (max-width: 480px) {
+  .mobile-disabled {
+    display: none;
+  }
+
+  .desktop-disabled {
+    display: initial;
+  }
+
   .mobile-off {
     display: none;
   }
@@ -552,4 +563,52 @@ a {
     left: 0;
 
   } */
+}
+
+
+/* sidenav code below 480 width */
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 36px;
+    /* margin-left: 50px; */
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+.mobile-burger {
+  position: fixed;
+  right: 10px;
+  top: 10px;
+  height: 30px;
 }
