--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ nav {
   height: 30px;
 }
 
+.hamburger:focus {
+  outline: none;
+}
+
 .navigation {
   margin-left: 40px;
   list-style-type: none;
